--- a/book_project/Views/Account/Login.cshtml
+++ b/book_project/Views/Account/Login.cshtml
@@ -1,14 +1,12 @@
-@* @page
+@model book_project.Models.LoginViewModel
 
 <h1>Login</h1>
 
 <form method="post">
-    <div asp-validation-summary="All"></div>
-
     <div class="form-group">
-        <label asp-for="Email">Email</label>
-        <input asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger"></span>
+        <label asp-for="Username">Username</label>
+        <input asp-for="Username" class="form-control" />
+        <span asp-validation-for="Username" class="text-danger"></span>
     </div>
 
     <div class="form-group">
@@ -27,8 +25,3 @@
 
     <button type="submit" class="btn btn-primary">Login</button>
 </form>
-
-@section Scripts {
-    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-} *@
