--- a/book_project/Views/Home/Books.cshtml
+++ b/book_project/Views/Home/Books.cshtml
@@ -28,6 +28,7 @@ else
                 <tr>
                     <td>@book.Title</td>
                     <td>@book.Genre</td>
+                    <td><a href="http://localhost:5210/reviews/@book.BookId">Reviews</a></td>
                 </tr>
             }
         </tbody>
