--- a/book_project/Views/Home/Reviews.cshtml
+++ b/book_project/Views/Home/Reviews.cshtml
@@ -5,6 +5,12 @@
 <div class="text-center">
     <h1 class="display-4">Reviews for book "@ViewData["book_title"]"</h1>
     <h2><a href="http://localhost:5210/AddReview/@ViewData["book_id"]" >Add Review</a></h2>
+    @if ((bool) ViewData["favorite"]) {
+        <h2><a href="http://localhost:5210/RemoveFromFavorites/@ViewData["book_id"]" >Remove To Favorites</a></h2>
+    }
+    else {
+        <h2><a href="http://localhost:5210/AddToFavorites/@ViewData["book_id"]" >Add To Favorites</a></h2>
+    }
 </div>
 
 @model List<book_project.Models.Review>
@@ -17,6 +23,7 @@ else
 {
     <table class="table">
         <thead>
+    using System.Data;
             <tr>
                 <th>Rating</th>
                 <th>Analysis</th> </tr>
