Expanded books table

--- a/book_project/Views/Home/Books.cshtml
+++ b/book_project/Views/Home/Books.cshtml
@@ -20,13 +20,16 @@ else
         <thead>
             <tr>
                 <th>Title</th>
-                <th>Genre</th> </tr>
+                <th>Author</th> 
+                <th>Genre</th> 
+                <th>Reviews</th> </tr>
         </thead>
         <tbody>
             @foreach (var book in Model)
             {
                 <tr>
                     <td>@book.Title</td>
+                    <td>@book.Author.Name</td>
                     <td>@book.Genre</td>
                     <td><a href="http://localhost:5210/reviews/@book.BookId">Reviews</a></td>
                 </tr>
