--- a/book_project/Views/Home/Index.cshtml
+++ b/book_project/Views/Home/Index.cshtml
@@ -1,8 +1,36 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home Page / Recommendations";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Recommended for you</h1>
+
 </div>
+
+@model List<book_project.Models.Book>
+
+@if (!Model.Any())
+{
+    <p>No recommendations</p>
+}
+else
+{
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Genre</th> 
+                <th>Reviews</th> </tr>
+        </thead>
+        <tbody>
+            @foreach (var book in Model)
+            {
+                <tr>
+                    <td>@book.Title</td>
+                    <td>@book.Genre</td>
+                    <td><a href="http://localhost:5210/reviews/@book.BookId">Reviews</a></td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
