Deleting reviews works

--- a/book_project/Views/Home/Reviews.cshtml
+++ b/book_project/Views/Home/Reviews.cshtml
@@ -34,6 +34,7 @@ else
                 <tr>
                     <td>@review.Rating</td>
                     <td>@review.Analysis</td>
+                    <td><a href="http://localhost:5210/DeleteReview/@review.ReviewId">Delete review</a></td>
                 </tr>
             }
         </tbody>
